--- a/style.css
+++ b/style.css
@@ -1,59 +1,172 @@
-*{
+* {
     margin: 0;
     padding: 0;
-    font-family: 'poppins' sans-serif;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
 }
 
-body{
+body {
     height: 100vh;
-    background-image: url(./assets/Img/Background/punching-bags-rope-gym.jpg);
+    background-image: url(../Site_Vitrine/assets/Img/punching-bags-rope-gym.jpg);
     background-size: cover;
     background-position: center;
 }
 
-
-li{
-    list-style: none;  
+li {
+    list-style: none;
 }
 
-a{
+a {
     text-decoration: none;
     color: #fff;
     font-size: 1rem;
 }
-a:hover{
+
+a:hover {
     color: #63c7b2;
 }
 
-header{
+header {
     position: relative;
-    padding: 0 2rem;
+    padding: 0 1.5rem;
     background-color: rgba(0, 0, 0, 0.238);
 }
 
-.navbar{
+.navbar {
     width: 100%;
     max-width: 1200px;
     height: 60px;
-    margin: 0 auto;
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 
-.navbar .logo a {
-    font-size:  1.5rem;
+.navbar .logo {
+    font-size: 2rem;
     font-weight: bold;
 }
 
 .navbar .Links {
     display: flex;
-    gap: 2rem;
+    gap: 2rem;  
 }
 
-.navbar .burger-menu-button{
+.navbar .burger-menu-button {
     color: #fff;
     font-size: 1.5rem;
     cursor: pointer;
+    display: none
 }
+
+.buttons {
+    display: flex;
+    gap: 10px;   
+}
+
+.action-button {
+    background-color: #63c7b2;
+    color: #120d31;
+    border: 1px solid #63c7b2;
+    padding: 0.5em 1.2rem;
+    border-radius: 5px;
+    outline: none;
+    font-size: 0.9rem;
+    font-weight: bold;
+    cursor: pointer;  
+}
+
+.action-button:hover {
+    color: #fff;
+    border: 1px solid #fff;
+}
+
+.pro {
+    background-color: transparent;
+    color: #fff;
+    border: 1px solid #fff;
+}
+
+.pro:hover {
+    background-color: #fff;
+    color: #120d31;
+}
+
+
+/* ---------- Burger Menu ----------*/
+
+.burger-menu {
+    display: none;
+     height: 0;
+    position: absolute;
+    right: 2rem;
+    top: 60px;
+    width: 200px;
+    background: rgba(0, 0, 0, 0.2);
+    backdrop-filter: blur(15px);
+    border-radius: 10px;
+    overflow: hidden;
+    transition: height 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+}
+
+.burger-menu.open {
+    height: 310px;
+
+}
+
+.burger-menu li {
+    padding: 0.7rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.divider {
+    height: 1px;
+    background-color: #fff;
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 1rem;
+}
+
+.burger-menu .action-button {
+    width: 80%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.buttons-burger-menu {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+
+
+/*---------- RESPONSIVE ----------*/
+
+@media (max-width: 990px){
+    header{
+       background: none; 
+    }
+
+    .navbar .Links,
+    .navbar .action-button{
+        display: none;
+
+    }
+
+    .navbar .burger-menu-button{
+        display: block;
+    }
+
+.burger-menu {
+    display: block;
+
+}
+}
+
+
 
