--- a/Pages/presentation.css
+++ b/Pages/presentation.css
@@ -7,7 +7,7 @@
 
 body {
     height: 100vh;
-    background-image: url(../asset/img/Activitées.jpg);
+    background-image: url(../assets/Img/BG_Presentation/Activitées.jpg);
     background-size: cover;
     background-position: center;
 }
